update dms to v2.2.1.1

--- a/wp-content/themes/dms/dms/changelog.txt
+++ b/wp-content/themes/dms/dms/changelog.txt
@@ -4,6 +4,15 @@
 
 ********************************************************
 
+Version 2.2.1.1
+
+  CORE - Fix for unsupported PHP versions.
+
+Version 2.2.1
+
+  CORE - Stop Twitter social link javascript from trying to use an API that is no longer public.
+  CORE - QuickCarousel,RevSlider - Support image alt using pl_get_image_id_from_src() function.
+
 Version 2.2
 
   CORE - Fix issue with global reset buttons throwing a javascript error in WP 4.3
